# openbotauth

./: .env.bak  .env.example  .gitignore  BOT_CLI_COMPLETE.md  BUILD_SUCCESS.md  CONTRIBUTING.md  ENV_FIX.md  GITHUB_OAUTH_SETUP.md  IMPLEMENTATION_STATUS.md  LICENSE  MCP_SERVER_COMPLETE.md  NEON_MIGRATION_COMPLETE.md  OAUTH_SUCCESS.md  PHASE1_COMPLETION.md  PHASE2_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP.md  SUPABASE_IMPORTS_FIXED.md  TELEMETRY_IMPLEMENTATION_PLAN.md  UI_MIGRATION_COMPLETE.md  VERIFIER_COMPLETE.md  WORDPRESS_PLUGIN_COMPLETE.md  demo-requests.sh  design_document.md  eslint.config.js  kill-services.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  restart-all-services.sh  restart-service.sh  setup-bot-from-db.js  setup-bot-with-real-keys.sh  start-all-services.sh  start-all.sh  tsconfig.json
.github/workflows/: docker-publish.yml
apps/registry-portal/: .env.production  README.md  index.html  package.json  vite.config.ts
apps/registry-portal/public/: robots.txt  skill.md
apps/registry-portal/public/skills/: openbotauth.md
apps/registry-portal/src/: App.tsx  index.css
apps/registry-portal/src/components/: AddAgentModal.tsx  AuthenticatedNav.tsx  CreateTokenModal.tsx  Footer.tsx
apps/registry-portal/src/components/marketing/: Hero.tsx  Logo.tsx  Navigation.tsx  SEO.tsx
apps/registry-portal/src/components/ui/: button.tsx
apps/registry-portal/src/lib/: api.ts
apps/registry-portal/src/pages/: ConfirmUsername.tsx  EditProfile.tsx  Index.tsx  Login.tsx  MyAgents.tsx  PublicProfile.tsx  Radar.tsx  Setup.tsx
apps/registry-portal/src/pages/marketing/: Contact.tsx  Crawlers.tsx  Home.tsx  Privacy.tsx  Publishers.tsx  Terms.tsx
apps/registry-portal/src/pages/portal/: AgentDetail.tsx  ConfirmUsername.tsx  EditProfile.tsx  Login.tsx  MyAgents.tsx  PublicProfile.tsx  (+4 more)
apps/test-server/: README.md  package.json  server.js  start-npm.sh  start-python.sh
apps/test-server/npm/: server.js
apps/test-server/python/: requirements.txt  server.py
docs/: A2A_CARD.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  BREAKING_CHANGES.md  CHATGPT_SIGNATURE_VERIFICATION.md  REAL_KEYS_SETUP.md  TELEMETRY.md  TESTING_GUIDE.md  TEST_FLOW.md
docs/specs/: draft-openbotauth-agent-identity-00.md
infra/apache-sidecar/: README.md  docker-compose.yaml
infra/docker/: .dockerignore  Dockerfile.a2a  Dockerfile.apache-sidecar  Dockerfile.base  Dockerfile.mcp  Dockerfile.proxy  Dockerfile.registry  Dockerfile.sidecar  Dockerfile.verifier  docker-compose.yaml
infra/neon/: EDGE_FUNCTIONS.md  README.md
infra/neon/migrations/: 001_initial_schema.sql  002_telemetry_tables.sql  003_telemetry_privacy.sql  004_signed_attempt_logs.sql  005_api_tokens.sql  006_backfill_profile_github.sql  007_agent_identity_and_certs.sql  008_agent_cert_fingerprint_index.sql  009_pop_nonces.sql
infra/proxy/: README.md  docker-compose.yaml
infra/proxy/demo-backend/htdocs/: protected.html  public.html
infra/sidecar/: README.md  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml
infra/sidecar/apache/: httpd.conf
infra/sidecar/apache/htdocs/: protected.html
infra/sidecar/demo-backend/htdocs/: public.html
plugins/wordpress-openbotauth/: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE.txt  README.md  openbotauth.php  readme.txt  uninstall.php
plugins/wordpress-openbotauth/assets/: admin.css  admin.js  style.css
plugins/wordpress-openbotauth/examples/: policy-advanced.json  policy-open-access.json  policy-payment.json  policy-rate-limited.json  policy-teaser.json  policy-whitelist.json
plugins/wordpress-openbotauth/includes/: Admin.php  Analytics.php  BotDetector.php  ContentFilter.php  Plugin.php  PolicyEngine.php  RestApiFilter.php  Verifier.php
plugins/wordpress-openbotauth/includes/Content/: DefaultMetadataProvider.php  MetadataProviderFactory.php  MetadataProviderInterface.php
plugins/wordpress-openbotauth/includes/Endpoints/: Router.php
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: fastapi_demo.py  flask_demo.py
sdks/python/src/openbotauth_verifier/: __init__.py  client.py  headers.py  models.py
sdks/python/src/openbotauth_verifier/middleware/: __init__.py  asgi.py  wsgi.py
sdks/python/tests/: __init__.py  test_client.py  test_headers.py  test_middleware.py
