[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbotauth-verifier"
version = "0.1.0"
description = "Python SDK for verifying OpenBotAuth signed requests (RFC 9421 HTTP Message Signatures)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "OpenBotAuth", email = "dev@openbotauth.org" }
]
keywords = [
    "openbotauth",
    "bot-auth",
    "http-signatures",
    "rfc9421",
    "jwks",
    "ai-agents",
    "bot-verification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]
fastapi = [
    "fastapi>=0.100",
    "starlette>=0.27",
]
flask = [
    "flask>=2.0",
]
all = [
    "openbotauth-verifier[dev,fastapi,flask]",
]

[project.urls]
Homepage = "https://openbotauth.org"
Documentation = "https://github.com/OpenBotAuth/openbotauth#readme"
Repository = "https://github.com/OpenBotAuth/openbotauth"
Issues = "https://github.com/OpenBotAuth/openbotauth/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openbotauth_verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
